This is pdfTeX, Version 3.14159265-2.6-1.40.20 (TeX Live 2019) (preloaded format=pdflatex)
 restricted \write18 enabled.
entering extended mode
(./thesis.tex
LaTeX2e <2018-12-01>
(/usr/local/texlive/2019/texmf-dist/tex/latex/base/article.cls
Document Class: article 2018/09/03 v1.4i Standard LaTeX document class
(/usr/local/texlive/2019/texmf-dist/tex/latex/base/size12.clo))
(/usr/local/texlive/2019/texmf-dist/tex/latex/hyperref/hyperref.sty
(/usr/local/texlive/2019/texmf-dist/tex/generic/oberdiek/hobsub-hyperref.sty
(/usr/local/texlive/2019/texmf-dist/tex/generic/oberdiek/hobsub-generic.sty))
(/usr/local/texlive/2019/texmf-dist/tex/latex/graphics/keyval.sty)
(/usr/local/texlive/2019/texmf-dist/tex/generic/ifxetex/ifxetex.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/oberdiek/auxhook.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/oberdiek/kvoptions.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/hyperref/pd1enc.def)
(/usr/local/texlive/2019/texmf-dist/tex/latex/latexconfig/hyperref.cfg)
(/usr/local/texlive/2019/texmf-dist/tex/latex/url/url.sty))
(/usr/local/texlive/2019/texmf-dist/tex/latex/hyperref/hpdftex.def
(/usr/local/texlive/2019/texmf-dist/tex/latex/oberdiek/rerunfilecheck.sty))
(/usr/local/texlive/2019/texmf-dist/tex/latex/xcolor/xcolor.sty
(/usr/local/texlive/2019/texmf-dist/tex/latex/graphics-cfg/color.cfg)
(/usr/local/texlive/2019/texmf-dist/tex/latex/graphics-def/pdftex.def))
(/usr/local/texlive/2019/texmf-dist/tex/latex/floatflt/floatflt.sty)
(/usr/local/texlive/2019/texmf-dist/tex/generic/ulem/ulem.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/tools/indentfirst.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/tools/longtable.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/graphics/graphicx.sty
(/usr/local/texlive/2019/texmf-dist/tex/latex/graphics/graphics.sty
(/usr/local/texlive/2019/texmf-dist/tex/latex/graphics/trig.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/graphics-cfg/graphics.cfg)))
(/usr/local/texlive/2019/texmf-dist/tex/latex/chngcntr/chngcntr.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/caption/caption.sty
(/usr/local/texlive/2019/texmf-dist/tex/latex/caption/caption3.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/caption/ltcaption.sty))
(/usr/local/texlive/2019/texmf-dist/tex/latex/etoolbox/etoolbox.sty)
! Undefined control sequence.
l.25 \fancyhf
             {}
! Undefined control sequence.
l.26 \fancyhead
               [R]{\head}

! LaTeX Error: Missing \begin{document}.

See the LaTeX manual or LaTeX Companion for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.26 \fancyhead[
                R]{\head}
! Undefined control sequence.
l.26 \fancyhead[R]{\head
                        }
! Undefined control sequence.
l.27 \fancyhead
               [L]{\thepage}
(/usr/local/texlive/2019/texmf-dist/tex/latex/geometry/geometry.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/biblatex/biblatex.sty
(/usr/local/texlive/2019/texmf-dist/tex/latex/logreq/logreq.sty
(/usr/local/texlive/2019/texmf-dist/tex/latex/logreq/logreq.def))
(/usr/local/texlive/2019/texmf-dist/tex/latex/base/ifthen.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/biblatex/blx-dm.def)
(/usr/local/texlive/2019/texmf-dist/tex/latex/biblatex/blx-compat.def)
(/usr/local/texlive/2019/texmf-dist/tex/latex/biblatex/blx-bibtex.def

Package biblatex Warning: Using fall-back BibTeX(8) backend:
(biblatex)                functionality may be reduced/unavailable.

) (/usr/local/texlive/2019/texmf-dist/tex/latex/biblatex/biblatex.def)
(/usr/local/texlive/2019/texmf-dist/tex/latex/biblatex/bbx/numeric.bbx
(/usr/local/texlive/2019/texmf-dist/tex/latex/biblatex/bbx/standard.bbx))
(/usr/local/texlive/2019/texmf-dist/tex/latex/biblatex/cbx/numeric.cbx)
(/usr/local/texlive/2019/texmf-dist/tex/latex/biblatex/biblatex.cfg))
(/usr/local/texlive/2019/texmf-dist/tex/latex/subfiles/subfiles.sty
(/usr/local/texlive/2019/texmf-dist/tex/latex/tools/verbatim.sty))
(/usr/local/texlive/2019/texmf-dist/tex/latex/biblatex/lbx/english.lbx)
(./thesis.aux)
(/usr/local/texlive/2019/texmf-dist/tex/latex/hyperref/nameref.sty
(/usr/local/texlive/2019/texmf-dist/tex/generic/oberdiek/gettitlestring.sty))
(./thesis.out) (./thesis.out)
(/usr/local/texlive/2019/texmf-dist/tex/context/base/mkii/supp-pdf.mkii
[Loading MPS to PDF converter (version 2006.09.02).]
) (/usr/local/texlive/2019/texmf-dist/tex/latex/oberdiek/epstopdf-base.sty
(/usr/local/texlive/2019/texmf-dist/tex/latex/oberdiek/grfext.sty)
(/usr/local/texlive/2019/texmf-dist/tex/latex/latexconfig/epstopdf-sys.cfg))
*geometry* driver: auto-detecting
*geometry* detected driver: pdftex
(./thesis.bbl) (./sections/thesis_titlepage.tex

! Package inputenc Error: Unicode character –§ (U+0424)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§
              –µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ
                –¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –¥ (U+0434)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥
                  –µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ
                    —Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character —Ä (U+0440)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä
                      –∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –∞ (U+0430)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞
                        –ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –ª (U+043B)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª
                          —å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character —å (U+044C)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å
                            –Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –Ω (U+043D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å–Ω
                              –æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ
                                –µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ
                                   –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –≥ (U+0433)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥
                                     –æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ
                                       —Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character —Å (U+0441)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å
                                         —É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character —É (U+0443)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É
                                           –¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –¥ (U+0434)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥
                                             –∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character –∞ (U+0430)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞
                                               —Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character —Ä (U+0440)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 {\large –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä
                                                 —Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω...


! Package inputenc Error: Unicode character —Å (U+0441)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...rge –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å
                                                  —Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–...


! Package inputenc Error: Unicode character —Ç (U+0442)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...e –§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç
                                                  –≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–...


! Package inputenc Error: Unicode character –≤ (U+0432)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–§–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤
                                                  –µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–...


! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–µ–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ
                                                  –Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–...


! Package inputenc Error: Unicode character –Ω (U+043D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–¥–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω
                                                  –Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–...


! Package inputenc Error: Unicode character –Ω (U+043D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–µ—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω
                                                  –æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ ...


! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...—Ä–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ
                                                  –µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ...


! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–∞–ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ
                                                   –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±...


! Package inputenc Error: Unicode character –∞ (U+0430)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...ª—å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞
                                                  –≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–...


! Package inputenc Error: Unicode character –≤ (U+0432)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...å–Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤
                                                  —Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–...


! Package inputenc Error: Unicode character —Ç (U+0442)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...Ω–æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç
                                                  –æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–...


! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...æ–µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ
                                                  –Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–...


! Package inputenc Error: Unicode character –Ω (U+043D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...µ –≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω
                                                  –æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–...


! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–≥–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ
                                                  –º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–∞—...


! Package inputenc Error: Unicode character –º (U+043C)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–æ—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º
                                                  –Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–∞—Ç–...


! Package inputenc Error: Unicode character –Ω (U+043D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...—Å—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω
                                                  –æ–µ –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ–...


! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...—É–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ
                                                  –µ –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª—...


! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–¥–∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ
                                                   –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª—å–...


! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...∞—Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ
                                                  –±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª—å–Ω–æ–µ

! Package inputenc Error: Unicode character –± (U+0431)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...Ä—Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±
                                                  —Ä–∞–∑–æ–≤–∞—Ç–µ–ª—å–Ω–æ–µ

! Package inputenc Error: Unicode character —Ä (U+0440)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...Å—Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä
                                                  –∞–∑–æ–≤–∞—Ç–µ–ª—å–Ω–æ–µ

! Package inputenc Error: Unicode character –∞ (U+0430)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...Ç–≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞
                                                  –∑–æ–≤–∞—Ç–µ–ª—å–Ω–æ–µ

! Package inputenc Error: Unicode character –∑ (U+0437)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...≤–µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑
                                                  –æ–≤–∞—Ç–µ–ª—å–Ω–æ–µ

! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...µ–Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ
                                                  –≤–∞—Ç–µ–ª—å–Ω–æ–µ

! Package inputenc Error: Unicode character –≤ (U+0432)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...Ω–Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤
                                                  –∞—Ç–µ–ª—å–Ω–æ–µ

! Package inputenc Error: Unicode character –∞ (U+0430)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...Ω–æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–∞
                                                  —Ç–µ–ª—å–Ω–æ–µ

! Package inputenc Error: Unicode character —Ç (U+0442)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...æ–µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–∞—Ç
                                                  –µ–ª—å–Ω–æ–µ

! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...µ –∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ
                                                  –ª—å–Ω–æ–µ

! Package inputenc Error: Unicode character –ª (U+043B)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–∞–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª
                                                  —å–Ω–æ–µ

! Package inputenc Error: Unicode character —å (U+044C)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–≤—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª—å
                                                  –Ω–æ–µ

! Package inputenc Error: Unicode character –Ω (U+043D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...—Ç–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª—å–Ω
                                                  –æ–µ

! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–æ–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª—å–Ω–æ
                                                  –µ

! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.6 ...–Ω–æ–º–Ω–æ–µ –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª—å–Ω–æ–µ
                                                  

! Package inputenc Error: Unicode character —É (U+0443)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É
      —á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character —á (U+0447)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á
        —Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character —Ä (U+0440)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä
          –µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ
            –∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –∂ (U+0436)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂
              –¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –¥ (U+0434)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥
                –µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ
                  –Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –Ω (U+043D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω
                    –∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –∏ (U+0438)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏
                      –µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ
                         –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –≤ (U+0432)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤
                           —ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character —ã (U+044B)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã
                             —Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character —Å (U+0441)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å
                               —à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character —à (U+0448)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à
                                 –µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ
                                   –≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –≥ (U+0433)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥
                                     –æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ
                                        –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ
                                          –±—Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –± (U+0431)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±
                                            —Ä–∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character —Ä (U+0440)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä
                                              –∞–∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –∞ (U+0430)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞
                                                –∑–æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –∑ (U+0437)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 —É—á—Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑
                                                  –æ–≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 ...Ä–µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ
                                                  –≤–∞–Ω–∏—è

! Package inputenc Error: Unicode character –≤ (U+0432)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 ...µ–∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤
                                                  –∞–Ω–∏—è

! Package inputenc Error: Unicode character –∞ (U+0430)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 ...∂–¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞
                                                  –Ω–∏—è

! Package inputenc Error: Unicode character –Ω (U+043D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 ...¥–µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω
                                                  –∏—è

! Package inputenc Error: Unicode character –∏ (U+0438)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 ...µ–Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏
                                                  —è

! Package inputenc Error: Unicode character —è (U+044F)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.8 ...Ω–∏–µ –≤—ã—Å—à–µ–≥–æ –æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è
                                                  

! Package inputenc Error: Unicode character –ù (U+041D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù
       –∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –∞ (U+0430)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞
         —Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character —Ü (U+0446)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü
           –∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –∏ (U+0438)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏
             –æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ
               –Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –Ω (U+043D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω
                 –∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –∞ (U+0430)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞
                   –ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –ª (U+043B)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª
                     —å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character —å (U+044C)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å
                       –Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –Ω (U+043D)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω
                         —ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character —ã (U+044B)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã
                           –π –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –π (U+0439)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π
                              –∏—Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –∏ (U+0438)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏
                                —Å—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character —Å (U+0441)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å
                                  —Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character —Å (U+0441)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å
                                    –ª–µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –ª (U+043B)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª
                                      –µ–¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –µ (U+0435)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ
                                        –¥–æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –¥ (U+0434)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥
                                          –æ–≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –æ (U+043E)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ
                                            –≤–∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –≤ (U+0432)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤
                                              –∞—Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...


! Package inputenc Error: Unicode character –∞ (U+0430)
(inputenc)                not set up for use with LaTeX.

See the inputenc package documentation for explanation.
Type  H <return>  for immediate help.
 ...                                              
                                                  
l.10 –ù–∞—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏—Å—Å–ª–µ–¥–æ–≤–∞
                                                —Ç–µ–ª—å—Å–∫–∏–π —É–Ω–∏–≤–µ—...
(That makes 100 errors; please try again.)
!  ==> Fatal error occurred, no output PDF file produced!
Transcript written on thesis.log.
